modified:   static/css/main.css 	deleted:    static/vendor/bootstrap/css/bootstrap-grid.css 	deleted:    static/vendor/bootstrap/css/bootstrap-grid.css.map 	deleted:    static/vendor/bootstrap/css/bootstrap-grid.min.css 	deleted:    static/vendor/bootstrap/css/bootstrap-grid.min.css.map 	deleted:    static/vendor/bootstrap/css/bootstrap-reboot.css 	deleted:    static/vendor/bootstrap/css/bootstrap-reboot.css.map 	deleted:    static/vendor/bootstrap/css/bootstrap-reboot.min.css 	deleted:    static/vendor/bootstrap/css/bootstrap-reboot.min.css.map 	deleted:    static/vendor/bootstrap/css/bootstrap.css 	deleted:    static/vendor/bootstrap/css/bootstrap.css.map 	deleted:    static/vendor/bootstrap/css/bootstrap.min.css 	deleted:    static/vendor/bootstrap/css/bootstrap.min.css.map 	deleted:    static/vendor/bootstrap/js/bootstrap.bundle.js 	deleted:    static/vendor/bootstrap/js/bootstrap.bundle.js.map 	deleted:    static/vendor/bootstrap/js/bootstrap.bundle.min.js 	deleted:    static/vendor/bootstrap/js/bootstrap.bundle.min.js.map 	deleted:    static/vendor/bootstrap/js/bootstrap.js 	deleted:    static/vendor/bootstrap/js/bootstrap.js.map 	deleted:    static/vendor/bootstrap/js/bootstrap.min.js 	deleted:    static/vendor/bootstrap/js/bootstrap.min.js.map 	deleted:    static/vendor/jquery/jquery.js 	deleted:    static/vendor/jquery/jquery.min.js 	deleted:    static/vendor/jquery/jquery.min.map 	deleted:    static/vendor/jquery/jquery.slim.js 	deleted:    static/vendor/jquery/jquery.slim.min.js 	deleted:    static/vendor/jquery/jquery.slim.min.map 	modified:   templates/base.html 	modified:   templates/partials/_footer.html 	modified:   templates/partials/_head.html 	modified:   templates/partials/_nav.html 	deleted:    templates/static/vendor/bootstrap/css/bootstrap-grid.css 	deleted:    templates/static/vendor/bootstrap/css/bootstrap-grid.css.map 	deleted:    templates/static/vendor/bootstrap/css/bootstrap-grid.min.css 	deleted:    templates/static/vendor/bootstrap/css

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: 'LDFComicSans';
     src: local('LDFComicSans'),
-        url('{% static 'fonts/LDFComicSans.otf' %} format("truetype")');
+        url('{% static "fonts/LDFComicSans.otf" %} format("truetype")');
 }
 
 *{
