--- a/telecom/templates/telecom/smartphone/smartphone_list.html
+++ b/telecom/templates/telecom/smartphone/smartphone_list.html
@@ -1,3 +1,76 @@
-{% extends 'telecom/smartphone/index.html' %}
+{% extends 'telecom/index_list.html' %}
 
 {% block title %}Lista de Smartphones | Sapore{% endblock %}
+
+{%block list_title%}Smartphones {%endblock%}
+
+{% block url_gen_csv %}{% url 'generate_csv' 'smartphone' '0' %}{% endblock %}
+{% block url_gen_simple_csv %}{% url 'generate_csv' 'smartphone' '1' %}{% endblock %}
+{% block url_add %}{% url 'smartphone_add' %}{% endblock %}
+{% block url_list %}{% url 'smartphone_list' %}{% endblock %}
+{% block url_search %}{% url 'smartphone_search' %}{% endblock %}
+
+{% block filter_form %}
+<div class="col-md-6">
+    <input name="term" value="{{ request.GET.term }}" class="form-control mr-sm-2" 
+            type="search" placeholder="Nome" aria-label="Search">
+</div>
+<div class="col-md-6">
+    <input name="filter_line" value="{{ request.GET.filter_line }}" class="form-control mr-sm-2" 
+            type="search" placeholder="Número" aria-label="Search">
+</div>
+<div class="col-md-3">
+    <select name="filter_model" class="form-select">
+        <option value="">Modelo</option>
+        {% for model in qs_smartphone_model %}
+        {% if model.name == request.GET.filter_model %}
+            <option selected value="{{model}}">{{model}}</option>
+        {% else %}
+            <option value="{{model}}">{{model}}</option>
+        {% endif %}
+        {% endfor %}
+    </select>
+</div>
+<div class="col-md-3">
+    <input name="filter_imei" value="{{ request.GET.filter_imei }}" class="form-control mr-sm-2" 
+            type="search" placeholder="IMEI" aria-label="Search">
+</div>
+<div class="col-md-3">
+    <input name="filter_branch" value="{{ request.GET.filter_branch }}" class="form-control mr-sm-2" 
+        type="search" placeholder="Filial" aria-label="Search">
+</div>
+<div class="col-md-3">
+    <select name="filter_status" class="form-select">
+        <option value="">Status</option>
+        {% for status in qs_smartphone_status %}
+        {% if status.name == request.GET.filter_status %}
+            <option selected value="{{status}}">{{status|title}}</option>
+        {% else %}
+            <option value="{{status}}">{{status|title}}</option>
+        {% endif %}
+        {% endfor %}
+    </select>
+</div>
+{% endblock %}
+
+{% block table_head %}
+<th><label class="mb-2">Modelo</label></th>
+<th><label class="mb-2">IMEI</label></th>
+<th><label class="mb-2">Nome</label></th>
+<th><label class="mb-2">Filial</label></th>
+<th><label class="mb-2">Status</label></th>
+{%endblock%}
+
+{% block table_body %}
+{% for smartphone in smartphones %}
+<tr>
+    <td>{{smartphone.obj_model}}</td>
+    <td><a href="{% url 'smartphone_details' smartphone.id %}">{{smartphone.imei_1}}</a></td>
+    <td>{{smartphone.name}}</td>
+    <td>{{smartphone.branch}}</td>
+    <td>{{smartphone.status}}</td>
+</tr>
+{% endfor %}
+{%endblock%}
+            
+                
