--- a/telecom/templates/telecom/vivobox/vivobox_search.html
+++ b/telecom/templates/telecom/vivobox/vivobox_search.html
@@ -1,3 +1,3 @@
-{% extends 'telecom/vivobox/index.html' %}
+{% extends 'telecom/vivobox/vivobox_list.html' %}
 
 {% block title %}Busca VivoBox | Sapore{% endblock %}
