--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -3,19 +3,23 @@
 {% block title %}Login | Sapore{% endblock %}
 
 {% block content %}
-<h1 class="mt-3 mb-3">Login</h1>
-<form method="POST" action="{% url 'login' %}">
-    {% csrf_token %}
-    {% include 'partials/_messages.html' %}
-    <div class="form-group">
-        <label>Usuário</label>
-        <input  type="user" name="user" value="{{request.POST.user}}" class="form-control" 
-                placeholder="Digite seu usuário">
-    </div>
-    <div class="form-group">
-        <label>Senha</label>
-        <input  type="password" name="password" class="form-control" placeholder="Digite uma senha">
-    </div>
-    <button type="submit" class="btn btn-primary">Entrar</button>
-</form>
+<div class="col-md-4">
+    <h1 class="mt-5 mb-3">Login</h1>
+    <form method="POST" class="row g-3" action="{% url 'login' %}">
+        {% csrf_token %}
+        {% include 'partials/_messages.html' %}
+        <div class="col-md-12">
+            <label>Usuário</label>
+            <input  type="user" name="user" value="{{request.POST.user}}" class="form-control" 
+                    placeholder="Digite seu usuário">
+        </div>
+        <div class="col-md-12">
+            <label>Senha</label>
+            <input  type="password" name="password" class="form-control" placeholder="Digite uma senha">
+        </div>
+        <div class="mt-4">
+            <button type="submit" class="btn btn-primary">Entrar</button>
+        </div>
+    </form>
+</div>
 {% endblock %}
