--- a/branch/templates/branch/branch_list.html
+++ b/branch/templates/branch/branch_list.html
@@ -24,7 +24,7 @@
                 <th><label scope="col">Status</label></th>
             </tr>
         </thead>
-        <tbody>
+        <tbody class="table-group-divider">
             {% for branch in branchs %}
                 <tr>
                     <td>{{branch.branch}}</td>
@@ -39,6 +39,8 @@
         </tbody>
     </table>
 </div>
+<br>
+
 {% include 'partials/_pagination.html' %}
 
 {% endblock %}
