--- a/dashboard/templates/dashboard/dashboard copy.html
+++ b/dashboard/templates/dashboard/dashboard copy.html
@@ -137,24 +137,24 @@
         dash_smart = create_dash({{qs_smartphone_status|safe}}, {{qs_smartphone_filter_models|safe}}, 
             'chart_smartphone', 'check_smart'{%for count in qs_smartphone_count%}, {{count}}{%endfor%});
 
-        dash_line = create_dash({{qs_line_status|safe}}, {{qs_line_filter_telecom|safe}}, 
-            'chart_line', 'check_line'{%for count in qs_line_count%}, {{count}}{%endfor%});
-
         dash_box = create_dash({{qs_vivobox_status|safe}}, {{qs_vivobox_filter_models|safe}}, 
             'chart_vivobox', 'check_box'{%for count in qs_vivobox_count%}, {{count}}{%endfor%});
+            
+        dash_line = create_dash({{qs_line_status|safe}}, {{qs_line_filter_telecom|safe}}, 
+        'chart_line', 'check_line'{%for count in qs_line_count%}, {{count}}{%endfor%});
     });
 </script>
 {% endblock %}
 
 {% block content %}
 <div class="row mt-4">
-    <div class="col-lg-12 mt-4">
-        <div class="card bg-light border-secondary px-3 py-3">
+    <div class="col-lg-6 mt-4">
+        <div class="card bg-light dash-shadow border-secondary px-3 py-3">
             <div class="d-flex justify-content-between">
                 <h5 class="card-title">Total de Smartphones por Modelo</h5>
                 <div class="justify-content-center">
-                    <button class="mb-3 btn btn-secondary" type="button" data-toggle="collapse" 
-                            data-target="#chart_filter_smartphone" aria-expanded="false" aria-controls="chart_filter_smartphone">
+                    <button class="mb-3 btn btn-secondary" type="button" data-bs-toggle="collapse" 
+                            data-bs-target="#chart_filter_smartphone" aria-label="Smartphone chart filter button">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-filter-right" viewBox="0 0 16 16">
                                 <path d="M14 10.5a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0 0 1h3a.5.5 0 0 0 .5-.5zm0-3a.5.5 0 0 0-.5-.5h-7a.5.5 0 0 0 0 1h7a.5.5 0 0 0 .5-.5zm0-3a.5.5 0 0 0-.5-.5h-11a.5.5 0 0 0 0 1h11a.5.5 0 0 0 .5-.5z"/>
                             </svg>
@@ -194,14 +194,15 @@
             <canvas id="chart_smartphone"></canvas>
             <div class="d-flex justify-content-between">
                 <div class="mt-2 ml-5">
-                    <input class="check-input" type="checkbox" value="" onchange="onToggleLogCheckbox(this)" id="check_smart">
+                    <input class="check-input" type="checkbox" value="" onchange="onToggleLogCheckbox(this)" 
+                        id="check_smart" aria-label="Smartphone log chart checkbox">
                     <label class="check-label">
                         Log
                     </label>
                 </div>
                 <div>
-                    <button class="mb-3 btn btn-primary" type="button" data-toggle="collapse" 
-                            data-target="#table_smartphone" aria-expanded="false" aria-controls="table_smartphone">
+                    <button class="mb-3 btn btn-primary" type="button" data-bs-toggle="collapse" 
+                            data-bs-target="#table_smartphone">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-table" viewBox="0 0 16 16">
                                 <path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm15 2h-4v3h4V4zm0 4h-4v3h4V8zm0 4h-4v3h3a1 1 0 0 0 1-1v-2zm-5 3v-3H6v3h4zm-5 0v-3H1v2a1 1 0 0 0 1 1h3zm-4-4h4V8H1v3zm0-4h4V4H1v3zm5-3v3h4V4H6zm4 4H6v3h4V8z"/>
                             </svg> Dados
@@ -245,15 +246,13 @@
             </div>
         </div>
     </div>
-</div>
-<div class="row mt-4">
-    <div class="col-lg-12 mt-4">
-        <div class="card bg-light border-secondary px-3 py-3">
+    <div class="col-lg-6 mt-4">
+        <div class="card bg-light dash-shadow border-secondary px-3 py-3">
             <div class="d-flex justify-content-between">
                 <h5 class="card-title">Total de VivoBox por Modelo</h5>
                 <div class="justify-content-center">
-                    <button class="mb-3 btn btn-secondary" type="button" data-toggle="collapse" 
-                            data-target="#chart_filter_vivobox" aria-expanded="false" aria-controls="chart_filter_vivobox">
+                    <button class="mb-3 btn btn-secondary" type="button" data-bs-toggle="collapse" 
+                            data-bs-target="#chart_filter_vivobox" aria-label="Vivobox chart filter button">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-filter-right" viewBox="0 0 16 16">
                                 <path d="M14 10.5a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0 0 1h3a.5.5 0 0 0 .5-.5zm0-3a.5.5 0 0 0-.5-.5h-7a.5.5 0 0 0 0 1h7a.5.5 0 0 0 .5-.5zm0-3a.5.5 0 0 0-.5-.5h-11a.5.5 0 0 0 0 1h11a.5.5 0 0 0 .5-.5z"/>
                             </svg>
@@ -293,14 +292,15 @@
             <canvas id="chart_vivobox"></canvas>
             <div class="d-flex justify-content-between">
                 <div class="mt-2 ml-5">
-                    <input class="check-input" type="checkbox" value="" onchange="onToggleLogCheckbox(this)" id="check_box">
+                    <input class="check-input" type="checkbox" value="" onchange="onToggleLogCheckbox(this)" 
+                        id="check_box" aria-label="Vivobox log chart checkbox">
                     <label class="check-label">
                         Log
                     </label>
                 </div>
                 <div class="justify-content-center">
-                    <button class="mb-3 btn btn-primary" type="button" data-toggle="collapse" 
-                            data-target="#table_vivobox" aria-expanded="false" aria-controls="table_vivobox">
+                    <button class="mb-3 btn btn-primary" type="button" data-bs-toggle="collapse" 
+                            data-bs-target="#table_vivobox">
                             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-table" viewBox="0 0 16 16">
                                 <path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm15 2h-4v3h4V4zm0 4h-4v3h4V8zm0 4h-4v3h3a1 1 0 0 0 1-1v-2zm-5 3v-3H6v3h4zm-5 0v-3H1v2a1 1 0 0 0 1 1h3zm-4-4h4V8H1v3zm0-4h4V4H1v3zm5-3v3h4V4H6zm4 4H6v3h4V8z"/>
                             </svg> Dados
@@ -346,13 +346,13 @@
     </div>
 </div>
 <div class="row mt-4" >
-    <div class="col-lg-12">
-        <div class="card bg-light border-secondary px-3 py-3">
+    <div class="col-lg-6">
+        <div class="card bg-light dash-shadow border-secondary px-3 py-3">
             <div class="d-flex justify-content-between">
                 <h5 class="card-title">Total de Linhas por Operadora</h5>
                 <div class="justify-content-center">
-                    <button class="mb-3 btn btn-secondary" type="button" data-toggle="collapse" 
-                            data-target="#chart_filter_line" aria-expanded="false" aria-controls="chart_filter_line">
+                    <button class="mb-3 btn btn-secondary" type="button" data-bs-toggle="collapse" 
+                            data-bs-target="#chart_filter_line" aria-label="Line chart filter button">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-filter-right" viewBox="0 0 16 16">
                                 <path d="M14 10.5a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0 0 1h3a.5.5 0 0 0 .5-.5zm0-3a.5.5 0 0 0-.5-.5h-7a.5.5 0 0 0 0 1h7a.5.5 0 0 0 .5-.5zm0-3a.5.5 0 0 0-.5-.5h-11a.5.5 0 0 0 0 1h11a.5.5 0 0 0 .5-.5z"/>
                             </svg>
@@ -363,15 +363,15 @@
                 <div>
                     <div class="card border-secondary px-3 py-3">
                         <form class="form my-2">
-                        <h6><b>Operadora</b></h6>
-                        {% for telecom in qs_line_telecom %}
+                        <h6><b>Modelos</b></h6>
+                        {% for telecom in qs_line_telecoms %}
                         <div>
-                            {% if not telecom in qs_line_filter_telecom %}
-                            <input name="line_telecom_{{telecom}}" id="line_telecom_{{telecom}}" type="checkbox">
+                            {% if telecom in qs_line_filter_telecoms %}
+                            <input name="line_{{telecom}}" id="line_{{telecom}}" type="checkbox" checked>
                             {% else %}
-                            <input name="line_telecom_{{telecom}}" id="line_telecom_{{telecom}}" type="checkbox" checked>
+                            <input name="line_{{telecom}}" id="line_{{telecom}}" type="checkbox">
                             {% endif %}
-                            <label for="line_telecom_{{telecom}}"> {{telecom}}</label>
+                            <label for="line_{{telecom}}"> {{telecom}}</label>
                         </div>
                         {% endfor %}
                         <div class="d-flex justify-content-between">
@@ -392,50 +392,51 @@
             <canvas id="chart_line"></canvas>
             <div class="d-flex justify-content-between">
                 <div class="mt-2 ml-5">
-                    <input class="check-input" type="checkbox" value="" onchange="onToggleLogCheckbox(this)" id="check_line">
+                    <input class="check-input" type="checkbox" value="" onchange="onToggleLogCheckbox(this)" 
+                        id="check_box" aria-label="Line log chart checkbox">
                     <label class="check-label">
                         Log
                     </label>
                 </div>
                 <div class="justify-content-center">
-                    <button class="mb-3 btn btn-primary" type="button" data-toggle="collapse" 
-                        data-target="#table_line" aria-expanded="false" aria-controls="table_line">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-table" viewBox="0 0 16 16">
-                            <path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm15 2h-4v3h4V4zm0 4h-4v3h4V8zm0 4h-4v3h3a1 1 0 0 0 1-1v-2zm-5 3v-3H6v3h4zm-5 0v-3H1v2a1 1 0 0 0 1 1h3zm-4-4h4V8H1v3zm0-4h4V4H1v3zm5-3v3h4V4H6zm4 4H6v3h4V8z"/>
-                        </svg> Dados
+                    <button class="mb-3 btn btn-primary" type="button" data-bs-toggle="collapse" 
+                            data-bs-target="#table_line">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-table" viewBox="0 0 16 16">
+                                <path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2zm15 2h-4v3h4V4zm0 4h-4v3h4V8zm0 4h-4v3h3a1 1 0 0 0 1-1v-2zm-5 3v-3H6v3h4zm-5 0v-3H1v2a1 1 0 0 0 1 1h3zm-4-4h4V8H1v3zm0-4h4V4H1v3zm5-3v3h4V4H6zm4 4H6v3h4V8z"/>
+                            </svg> Dados
                     </button>
                 </div>
             </div>
             <div class="collapse" id="table_line">
                 <div class="card border-secondary px-3 py-3">
-                    <h5 class="card-title">Total de Linhas por Operadora</h5>
+                    <h5 class="card-title">Total de Linhas por Modelo</h5>
                     <div class="row">
-                        {% for telecom in qs_line_telecom %}
-                        {% if telecom in qs_line_filter_telecom %}
-                        <div class="col-md-4">
-                            <br>
-                            <h6><b>{{telecom}}</b></h6>
-                            <table class="table">
-                                <thead>
-                                    <tr>
-                                        <th>Status</th>
-                                        <th>Total</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    {% for status, qs_telecoms in qs_line.items %}
-                                    {% for qs_telecom, value in qs_telecoms.items %}
-                                    {% if qs_telecom == telecom %}
+                        {% for telecom in qs_line_telecoms %}
+                        {% if telecom in qs_line_filter_telecoms %}
+                            <div class="col-md-4">
+                                <br>
+                                <h6><b>{{telecom}}</b></h6>
+                                <table class="table">
+                                    <thead>
                                         <tr>
-                                            <td class="card-text">{{status}}</td>
-                                            <td class="card-text">{{value}}</td>
+                                            <th>Status</th>
+                                            <th>Total</th>
                                         </tr>
-                                    {% endif %}
-                                    {% endfor %}
-                                    {% endfor %}
-                                </tbody>
-                            </table>
-                        </div>
+                                    </thead>
+                                    <tbody>
+                                        {% for status, qs_telecoms in qs_line.items %}
+                                        {% for qs_telecom, value in qs_telecoms.items %}
+                                            {% if qs_telecom == telecom %}
+                                                <tr>
+                                                    <td class="card-text">{{status}}</td>
+                                                    <td class="card-text">{{value}}</td>
+                                                </tr>
+                                            {% endif %}
+                                        {% endfor %}
+                                        {% endfor %}
+                                    </tbody>
+                                </table>
+                            </div>
                         {% endif %}
                         {% endfor %}
                     </div>
