--- a/telecom/templates/telecom/index_list.html
+++ b/telecom/templates/telecom/index_list.html
@@ -2,83 +2,40 @@
 
 {% block content %}
 <div class="d-flex justify-content-between mt-5">
-    <h1>VivoBox</h1>
-    <div>
-        <a class="mt-2 ml-1 btn btn-primary justify-content-center" href="{% url 'generate_csv' 'vivobox' '0' %}">
+    <h1>{%block list_title%}{%endblock%}</h1>
+    <div class="mt-2 ml-1">
+        <a class="btn btn-primary" href="{% block url_gen_csv %}{% endblock %}" aria-label=".CSV">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-filetype-csv" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M14 4.5V14a2 2 0 0 1-2 2h-1v-1h1a1 1 0 0 0 1-1V4.5h-2A1.5 1.5 0 0 1 9.5 3V1H4a1 1 0 0 0-1 1v9H2V2a2 2 0 0 1 2-2h5.5L14 4.5ZM3.517 14.841a1.13 1.13 0 0 0 .401.823c.13.108.289.192.478.252.19.061.411.091.665.091.338 0 .624-.053.859-.158.236-.105.416-.252.539-.44.125-.189.187-.408.187-.656 0-.224-.045-.41-.134-.56a1.001 1.001 0 0 0-.375-.357 2.027 2.027 0 0 0-.566-.21l-.621-.144a.97.97 0 0 1-.404-.176.37.37 0 0 1-.144-.299c0-.156.062-.284.185-.384.125-.101.296-.152.512-.152.143 0 .266.023.37.068a.624.624 0 0 1 .246.181.56.56 0 0 1 .12.258h.75a1.092 1.092 0 0 0-.2-.566 1.21 1.21 0 0 0-.5-.41 1.813 1.813 0 0 0-.78-.152c-.293 0-.551.05-.776.15-.225.099-.4.24-.527.421-.127.182-.19.395-.19.639 0 .201.04.376.122.524.082.149.2.27.352.367.152.095.332.167.539.213l.618.144c.207.049.361.113.463.193a.387.387 0 0 1 .152.326.505.505 0 0 1-.085.29.559.559 0 0 1-.255.193c-.111.047-.249.07-.413.07-.117 0-.223-.013-.32-.04a.838.838 0 0 1-.248-.115.578.578 0 0 1-.255-.384h-.765ZM.806 13.693c0-.248.034-.46.102-.633a.868.868 0 0 1 .302-.399.814.814 0 0 1 .475-.137c.15 0 .283.032.398.097a.7.7 0 0 1 .272.26.85.85 0 0 1 .12.381h.765v-.072a1.33 1.33 0 0 0-.466-.964 1.441 1.441 0 0 0-.489-.272 1.838 1.838 0 0 0-.606-.097c-.356 0-.66.074-.911.223-.25.148-.44.359-.572.632-.13.274-.196.6-.196.979v.498c0 .379.064.704.193.976.131.271.322.48.572.626.25.145.554.217.914.217.293 0 .554-.055.785-.164.23-.11.414-.26.55-.454a1.27 1.27 0 0 0 .226-.674v-.076h-.764a.799.799 0 0 1-.118.363.7.7 0 0 1-.272.25.874.874 0 0 1-.401.087.845.845 0 0 1-.478-.132.833.833 0 0 1-.299-.392 1.699 1.699 0 0 1-.102-.627v-.495Zm8.239 2.238h-.953l-1.338-3.999h.917l.896 3.138h.038l.888-3.138h.879l-1.327 4Z"/>
             </svg></a>
-        <a class="mt-2 ml-1 btn btn-primary justify-content-center" href="{% url 'generate_csv' 'vivobox' '1' %}">
+        <a class="btn btn-primary" href="{% block url_gen_simple_csv %}{% endblock %}" aria-label=".CSV Simplified">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-filetype-csv" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M14 4.5V14a2 2 0 0 1-2 2h-1v-1h1a1 1 0 0 0 1-1V4.5h-2A1.5 1.5 0 0 1 9.5 3V1H4a1 1 0 0 0-1 1v9H2V2a2 2 0 0 1 2-2h5.5L14 4.5ZM3.517 14.841a1.13 1.13 0 0 0 .401.823c.13.108.289.192.478.252.19.061.411.091.665.091.338 0 .624-.053.859-.158.236-.105.416-.252.539-.44.125-.189.187-.408.187-.656 0-.224-.045-.41-.134-.56a1.001 1.001 0 0 0-.375-.357 2.027 2.027 0 0 0-.566-.21l-.621-.144a.97.97 0 0 1-.404-.176.37.37 0 0 1-.144-.299c0-.156.062-.284.185-.384.125-.101.296-.152.512-.152.143 0 .266.023.37.068a.624.624 0 0 1 .246.181.56.56 0 0 1 .12.258h.75a1.092 1.092 0 0 0-.2-.566 1.21 1.21 0 0 0-.5-.41 1.813 1.813 0 0 0-.78-.152c-.293 0-.551.05-.776.15-.225.099-.4.24-.527.421-.127.182-.19.395-.19.639 0 .201.04.376.122.524.082.149.2.27.352.367.152.095.332.167.539.213l.618.144c.207.049.361.113.463.193a.387.387 0 0 1 .152.326.505.505 0 0 1-.085.29.559.559 0 0 1-.255.193c-.111.047-.249.07-.413.07-.117 0-.223-.013-.32-.04a.838.838 0 0 1-.248-.115.578.578 0 0 1-.255-.384h-.765ZM.806 13.693c0-.248.034-.46.102-.633a.868.868 0 0 1 .302-.399.814.814 0 0 1 .475-.137c.15 0 .283.032.398.097a.7.7 0 0 1 .272.26.85.85 0 0 1 .12.381h.765v-.072a1.33 1.33 0 0 0-.466-.964 1.441 1.441 0 0 0-.489-.272 1.838 1.838 0 0 0-.606-.097c-.356 0-.66.074-.911.223-.25.148-.44.359-.572.632-.13.274-.196.6-.196.979v.498c0 .379.064.704.193.976.131.271.322.48.572.626.25.145.554.217.914.217.293 0 .554-.055.785-.164.23-.11.414-.26.55-.454a1.27 1.27 0 0 0 .226-.674v-.076h-.764a.799.799 0 0 1-.118.363.7.7 0 0 1-.272.25.874.874 0 0 1-.401.087.845.845 0 0 1-.478-.132.833.833 0 0 1-.299-.392 1.699 1.699 0 0 1-.102-.627v-.495Zm8.239 2.238h-.953l-1.338-3.999h.917l.896 3.138h.038l.888-3.138h.879l-1.327 4Z"/>
             </svg> Simplificado</a>
-        <a class="mt-2 ml-1 btn btn-primary justify-content-center" href="{% url 'vivobox_add' %}">
+        <a class="btn btn-primary" href="{% block url_add %}{% endblock %}" aria-label="Add new line">
             <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-database-add" viewBox="0 0 18 18">
                 <path d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7Zm.5-5v1h1a.5.5 0 0 1 0 1h-1v1a.5.5 0 0 1-1 0v-1h-1a.5.5 0 0 1 0-1h1v-1a.5.5 0 0 1 1 0Z"/>
                 <path d="M12.096 6.223A4.92 4.92 0 0 0 13 5.698V7c0 .289-.213.654-.753 1.007a4.493 4.493 0 0 1 1.753.25V4c0-1.007-.875-1.755-1.904-2.223C11.022 1.289 9.573 1 8 1s-3.022.289-4.096.777C2.875 2.245 2 2.993 2 4v9c0 1.007.875 1.755 1.904 2.223C4.978 15.71 6.427 16 8 16c.536 0 1.058-.034 1.555-.097a4.525 4.525 0 0 1-.813-.927C8.5 14.992 8.252 15 8 15c-1.464 0-2.766-.27-3.682-.687C3.356 13.875 3 13.373 3 13v-1.302c.271.202.58.378.904.525C4.978 12.71 6.427 13 8 13h.027a4.552 4.552 0 0 1 0-1H8c-1.464 0-2.766-.27-3.682-.687C3.356 10.875 3 10.373 3 10V8.698c.271.202.58.378.904.525C4.978 9.71 6.427 10 8 10c.262 0 .52-.008.774-.024a4.525 4.525 0 0 1 1.102-1.132C9.298 8.944 8.666 9 8 9c-1.464 0-2.766-.27-3.682-.687C3.356 7.875 3 7.373 3 7V5.698c.271.202.58.378.904.525C4.978 6.711 6.427 7 8 7s3.022-.289 4.096-.777ZM3 4c0-.374.356-.875 1.318-1.313C5.234 2.271 6.536 2 8 2s2.766.27 3.682.687C12.644 3.125 13 3.627 13 4c0 .374-.356.875-1.318 1.313C10.766 5.729 9.464 6 8 6s-2.766-.27-3.682-.687C3.356 4.875 3 4.373 3 4Z"/>
-            </svg> Adicionar VivoBox</a>
+            </svg> Adicionar</a>
     </div>
 </div>
 <div class="d-flex justify-content-between mt-2">
     <div></div>
     <div class="justify-content-center">
-        <button class="mb-3 btn btn-secondary" type="button" data-toggle="collapse" 
-                data-target="#table_vivobox" aria-expanded="false" aria-controls="table_vivobox">
+        <button class="mb-3 btn btn-secondary" type="button" data-bs-toggle="collapse" 
+                data-bs-target="#card_filter_line" aria-label="Button card line filter">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-filter-right" viewBox="0 0 16 16">
                     <path d="M14 10.5a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0 0 1h3a.5.5 0 0 0 .5-.5zm0-3a.5.5 0 0 0-.5-.5h-7a.5.5 0 0 0 0 1h7a.5.5 0 0 0 .5-.5zm0-3a.5.5 0 0 0-.5-.5h-11a.5.5 0 0 0 0 1h11a.5.5 0 0 0 .5-.5z"/>
                 </svg>
         </button>
     </div>
 </div>
-<div class="collapse" id="table_vivobox">
+<div class="collapse" id="card_filter_line">
     <div class="card border-secondary px-3 py-3">
-        <form class="form my-2" action="{% url 'vivobox_search' %}">
-            <div class="row">
-                <div class="form-group col-md-6">
-                    <input name="term" value="{{ request.GET.term }}" class="form-control mr-sm-2" 
-                            type="search" placeholder="Nome" aria-label="Search">
-                </div>
-                <div class="form-group col-md-6">
-                    <input name="filter_line" value="{{ request.GET.filter_line }}" class="form-control mr-sm-2" 
-                            type="search" placeholder="Número" aria-label="Search">
-                </div>
-            </div>
-            <div class="row">
-                <div class="form-group col-md-3">
-                    <select name="filter_model" class="custom-select">
-                        <option value="">Modelo</option>
-                        {% for model in qs_vivobox_model %}
-                        {% if model.name == request.GET.filter_model %}
-                            <option selected value="{{model}}">{{model}}</option>
-                        {% else %}
-                            <option value="{{model}}">{{model}}</option>
-                        {% endif %}
-                        {% endfor %}
-                    </select>
-                </div>
-                <div class="form-group col-md-3">
-                    <input name="filter_imei" value="{{ request.GET.filter_imei }}" class="form-control mr-sm-2" 
-                            type="search" placeholder="IMEI" aria-label="Search">
-                </div>
-                <div class="form-group col-md-3">
-                    <input name="filter_branch" value="{{ request.GET.filter_branch }}" class="form-control mr-sm-2" 
-                        type="search" placeholder="Filial" aria-label="Search">
-                </div>
-                <div class="form-group col-md-3">
-                    <select name="filter_status" class="custom-select">
-                        <option value="">Status</option>
-                        {% for status in qs_vivobox_status %}
-                        {% if status.name == request.GET.filter_status %}
-                            <option selected value="{{status}}">{{status|title}}</option>
-                        {% else %}
-                            <option value="{{status}}">{{status|title}}</option>
-                        {% endif %}
-                        {% endfor %}
-                    </select>
-                </div>
-            </div>
+        <form class="row g-3" action="{%block url_search%}{%endblock%}">
+            {% block filter_form %}{%endblock%}
             <div class="d-flex justify-content-between">
-                <a class="btn btn-secondary mt-2" href="{% url 'vivobox_list' %}">
+                <a class="btn btn-secondary mt-2" href="{% block url_list %}{%endblock%}">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-trash3-fill" viewBox="0 0 20 20">
                         <path d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5Zm-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5ZM4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06Zm6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528ZM8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5Z"/>
                     </svg> Limpar</a>
@@ -92,29 +49,19 @@
     <br>
 </div>
 <div>
-    <table class="table">
+    <table class="table mb-2">
         <thead>
             <tr>
-                <th><label class="mb-2">Modelo</label></th>
-                <th><label class="mb-2">IMEI</label></th>
-                <th><label class="mb-2">Nome</label></th>
-                <th><label class="mb-2">Filial</label></th>
-                <th><label class="mb-2">Status</label></th>
+                {% block table_head %}{%endblock%}
             </tr>
         </thead>
-        <tbody>
-            {% for vivobox in vivoboxs %}
-                <tr>
-                    <td>{{vivobox.obj_model}}</td>
-                    <td><a href="{% url 'vivobox_details' vivobox.id %}">{{vivobox.imei_1}}</a></td>
-                    <td>{{vivobox.name}}</td>
-                    <td>{{vivobox.branch}}</td>
-                    <td>{{vivobox.status}}</td>
-                </tr>
-            {% endfor %}
+        <tbody class="table-group-divider">
+            {% block table_body %}{%endblock%}
         </tbody>
     </table>
 </div>
+<br>
+
 {% include 'partials/_pagination.html' %}
 
 {% endblock %}
