--- a/telecom/templates/telecom/line/line_search.html
+++ b/telecom/templates/telecom/line/line_search.html
@@ -1,3 +1,3 @@
-{% extends 'telecom/line/index.html' %}
+{% extends 'telecom/line/line_list.html' %}
 
 {% block title %}Busca Linhas | Sapore{% endblock %}
