--- a/telecom/templates/telecom/param/line/plan_list.html
+++ b/telecom/templates/telecom/param/line/plan_list.html
@@ -1,10 +1,9 @@
-{% extends 'telecom/param/index_list.html' %}
+{% extends 'partials/_index_list.html' %}
 
 {% block title %}Linhas | Planos | Sapore{% endblock %}
 
 
 {%block list_title%}Planos {%endblock%}
-{%block list_add%} Adicionar Plano{%endblock%}
 {%block list_add_url%}{% url 'line_plan_add' %}{%endblock%}
 
 {%block list_th%}
@@ -19,4 +18,3 @@
 {%endblock%}
 
 {%block list_edit_url%}{% url 'line_plan_edit' object.id %}{%endblock%}
-{%block list_delete_url%}{% url 'delete_model' 'line' object.id %}{%endblock%}
