--- a/templates/partials/_head.html
+++ b/templates/partials/_head.html
@@ -1,59 +1,17 @@
 {% load static %}
 
 <meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" integrity="sha256-Uv9BNBucvCPipKQ2NS9wYpJmi8DTOEfTA/nH2aoJALw=" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.css" integrity="sha256-aa0xaJgmK/X74WM224KMQeNQC2xYKwlAt08oZqjeF0E=" crossorigin="anonymous">
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+
 <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon.ico' %}">
 
-<style>
-    @font-face {
-        font-family: 'Aileron';
-        font-style: normal;
-        src: local('Aileron'), url({% static 'fonts/Aileron-Regular.otf' %}) format('opentype');
-    }
-
-    #loadingDiv {
-        position:fixed;
-        top:0;
-        left:0;
-        width:100%;
-        height:100%;
-        background-color:rgba(46, 42, 37, 0.6);
-        z-index: 1;
-    }
-
-    .dropdown-submenu{
-        position: relative;
-    }
-    .dropdown-submenu a::after{
-        transform: rotate(-90deg);
-        position: absolute;
-        right: 3px;
-        top: 40%;
-    }
-    .dropdown-submenu:hover .dropdown-menu, .dropdown-submenu:focus .dropdown-menu{
-        display: flex;
-        flex-direction: column;
-        position: absolute !important;
-        margin-top: -30px;
-        left: 100%;
-    }
-
-    #navBar {
-        background-color: #ac0e14;
-    }
-
-    #logoSapore {
-        width: 102px; 
-        height: 30px;
-    }
-</style>
-
 <extrastyle>
-    <link rel="stylesheet" href="{% static 'css/main.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
 </extrastyle>
