deleted:    dashboard/templates/dashboard/dashboard copy.html 	modified:   telecom/templates/telecom/index_list.html 	modified:   telecom/templates/telecom/line/line_add.html 	modified:   telecom/templates/telecom/line/line_edit.html 	modified:   telecom/templates/telecom/smartphone/smartphone_add.html 	modified:   telecom/templates/telecom/smartphone/smartphone_edit.html 	modified:   telecom/templates/telecom/vivobox/vivobox_add.html 	modified:   telecom/templates/telecom/vivobox/vivobox_edit.html 	modified:   templates/partials/_index_form.html 	modified:   templates/static/css/main.css

--- a/templates/static/css/main.css
+++ b/templates/static/css/main.css
@@ -95,7 +95,7 @@ strong {
 }
 
 .card {
-    box-shadow: 0 .2rem .2rem var(--shadow-dark);
+    box-shadow: 0 .4rem .2rem -.2rem var(--shadow-dark);
 }
 
 .btn-secondary, .btn-secondary.disabled,.btn-secondary:disabled, .btn-outline-secondary, 
