--- a/telecom/templates/telecom/vivobox/vivobox_add.html
+++ b/telecom/templates/telecom/vivobox/vivobox_add.html
@@ -1,27 +1,6 @@
-{% extends 'base.html' %}
+{% extends 'partials/_index_form.html' %}
 
-{% block title %}Adicionar VivoBox | Sapore{% endblock %}
+{% block title %}Adicionar - Vivobox | Sapore{% endblock %}
 
-{% block content %}
-<div class="d-flex flex-row-reverse">
-    <a class="btn btn-primary mt-2" href="{% url 'vivobox_list' %}"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-90deg-left" viewBox="0 0 16 16">
-        <path fill-rule="evenodd" d="M1.146 4.854a.5.5 0 0 1 0-.708l4-4a.5.5 0 1 1 .708.708L2.707 4H12.5A2.5 2.5 0 0 1 15 6.5v8a.5.5 0 0 1-1 0v-8A1.5 1.5 0 0 0 12.5 5H2.707l3.147 3.146a.5.5 0 1 1-.708.708l-4-4z"/>
-    </svg> Voltar</a>
-</div>
-<h1 class="mt-1">Adicionar VivoBox</h1>
-<form method="post" class="form-group" enctype="multipart/form-data">
-    {% csrf_token %}
-    {% include 'partials/_messages.html' %}
-    <table class="table">
-    {{form}}
-    </table>
-    <br>
-    <div>
-    <button class="btn btn-primary mt-2" type="submit">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check2-square" viewBox="0 0 16 16">
-            <path d="M3 14.5A1.5 1.5 0 0 1 1.5 13V3A1.5 1.5 0 0 1 3 1.5h8a.5.5 0 0 1 0 1H3a.5.5 0 0 0-.5.5v10a.5.5 0 0 0 .5.5h10a.5.5 0 0 0 .5-.5V8a.5.5 0 0 1 1 0v5a1.5 1.5 0 0 1-1.5 1.5H3z"/>
-            <path d="m8.354 10.354 7-7a.5.5 0 0 0-.708-.708L8 9.293 5.354 6.646a.5.5 0 1 0-.708.708l3 3a.5.5 0 0 0 .708 0z"/>
-        </svg> Confirmar</button>
-    </div>
-</form>
-{% endblock %}
+{%block back_url%}{% url 'vivobox_list' %}{%endblock%}
+{%block title_form%}Adicionar Vivobox{%endblock%}
