--- a/templates/partials/_index_form.html
+++ b/templates/partials/_index_form.html
@@ -7,13 +7,14 @@
     </svg> Voltar</a>
 </div>
 <h1 class="mt-1">{%block title_form%}{%endblock%}</h1>
-<form method="post" class="form-group" enctype="multipart/form-data">
+<form method="post" class="form-group " enctype="multipart/form-data">
     {% csrf_token %}
     {% include 'partials/_messages.html' %}
-    <table class="table">
-        {{form}}
-    </table>
-    <br>
+    <div class="table-responsive">
+        <table class="table">
+            {{form}}
+        </table>
+    </div>
     <button class="btn btn-primary mt-2" type="submit">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-check2-square" viewBox="0 0 16 16">
             <path d="M3 14.5A1.5 1.5 0 0 1 1.5 13V3A1.5 1.5 0 0 1 3 1.5h8a.5.5 0 0 1 0 1H3a.5.5 0 0 0-.5.5v10a.5.5 0 0 0 .5.5h10a.5.5 0 0 0 .5-.5V8a.5.5 0 0 1 1 0v5a1.5 1.5 0 0 1-1.5 1.5H3z"/>
